fix header on mobile

--- a/src/scss/common/header.scss
+++ b/src/scss/common/header.scss
@@ -6,6 +6,11 @@
     position: absolute;
     top: 3rem;
     left: 3rem;
+    @include respond-to('small')
+    {
+        top: 1rem;
+        left: 1rem;
+    }
   }
 
   &__desc
@@ -15,6 +20,11 @@
     position: absolute;
     top: 3rem;
     right: 3rem;
+    @include respond-to('small')
+    {
+        top: 1rem;
+        right: 1rem;
+    }
     img
     {
       height: 2.5rem;
@@ -22,7 +32,7 @@
     }
     span
     {
-      width: 10rem;
+      width: 8rem;
       display: inline-block;
     }
   }
